Return chain